force-app/main/default/objects/Benefits__c/fields/APAC20_Conference_Pass_1__c.field-meta.xml
<CustomField>
    <fullName>APAC20_Conference_Pass_1__c</fullName>
    <label>APAC20 Conference Pass 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Number_0_20</valueSetName>
    </valueSet>
</CustomField>