force-app/main/default/objects/Benefits__c/fields/Banner_Ad_IT_News_APAC_Digital_3__c.field-meta.xml
<CustomField>
    <fullName>Banner_Ad_IT_News_APAC_Digital_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banner Ad IT News APAC Digital 3</label>
    <type>Checkbox</type>
</CustomField>