force-app/main/default/objects/Benefits__c/fields/Banner_Advertisement_IT_News_APAC_site__c.field-meta.xml
<CustomField>
    <fullName>Banner_Advertisement_IT_News_APAC_site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banner Advertisement: IT News APAC Site</label>
    <type>Checkbox</type>
</CustomField>