force-app/main/default/objects/Benefits__c/fields/Benefit_Review_Before_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Review_Before_Renewal__c</fullName>
    <label>Benefit Review Before Renewal</label>
    <type>Date</type>
</CustomField>