force-app/main/default/objects/Benefits__c/fields/Benefit_Review_Mid_Year__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Review_Mid_Year__c</fullName>
    <label>Benefit Review Mid Year</label>
    <type>Date</type>
</CustomField>