force-app/main/default/objects/Benefits__c/fields/Benefit_Review_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Review_Scheduled_For__c</fullName>
    <label>Benefit Review Scheduled For</label>
    <type>Date</type>
</CustomField>