force-app/main/default/objects/Benefits__c/fields/Breakfast_Attendees_1__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Attendees_1__c</fullName>
    <label>Breakfast Attendees 1</label>
    <type>TextArea</type>
</CustomField>