force-app/main/default/objects/Benefits__c/fields/Breakfast_Attendees_2__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Attendees_2__c</fullName>
    <label>Breakfast Attendees 2</label>
    <type>TextArea</type>
</CustomField>