force-app/main/default/objects/Benefits__c/fields/Breakfast_Attendees_3__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Attendees_3__c</fullName>
    <label>Breakfast Attendees 3</label>
    <type>TextArea</type>
</CustomField>