force-app/main/default/objects/Benefits__c/fields/Chapter_Participant__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chapter Participant</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Benefits1</relationshipName>
    <type>Lookup</type>
</CustomField>