force-app/main/default/objects/Benefits__c/fields/CM_Appreciation_Breakfast_Invitees_1__c.field-meta.xml
<CustomField>
    <fullName>CM_Appreciation_Breakfast_Invitees_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CM Appreciation Breakfast Invitees 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Benefits4</relationshipName>
    <type>Lookup</type>
</CustomField>