force-app/main/default/objects/Benefits__c/fields/CM_Lounge_Usage__c.field-meta.xml
<CustomField>
    <fullName>CM_Lounge_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Lounge Usage</label>
    <type>Checkbox</type>
</CustomField>