force-app/main/default/objects/Benefits__c/fields/CM_Quarterly_Webinar_1__c.field-meta.xml
<CustomField>
    <fullName>CM_Quarterly_Webinar_1__c</fullName>
    <label>CM Quarterly Webinar 1</label>
    <type>Date</type>
</CustomField>