force-app/main/default/objects/Benefits__c/fields/CM_Quarterly_Webinar_3__c.field-meta.xml
<CustomField>
    <fullName>CM_Quarterly_Webinar_3__c</fullName>
    <label>CM Quarterly Webinar 3</label>
    <type>Date</type>
</CustomField>