force-app/main/default/objects/Benefits__c/fields/CM_Quarterly_Webinar_January__c.field-meta.xml
<CustomField>
    <fullName>CM_Quarterly_Webinar_January__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Webinar January</label>
    <type>Checkbox</type>
</CustomField>