force-app/main/default/objects/Benefits__c/fields/CM_Spotlight_listing__c.field-meta.xml
<CustomField>
    <fullName>CM_Spotlight_listing__c</fullName>
    <label>CM Spotlight Listing</label>
    <type>Date</type>
</CustomField>