force-app/main/default/objects/Benefits__c/fields/CM_Webinar_August__c.field-meta.xml
<CustomField>
    <fullName>CM_Webinar_August__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Webinar August</label>
    <type>Checkbox</type>
</CustomField>