force-app/main/default/objects/Benefits__c/fields/CM_Webinar_December__c.field-meta.xml
<CustomField>
    <fullName>CM_Webinar_December__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Webinar December</label>
    <type>Checkbox</type>
</CustomField>