force-app/main/default/objects/Benefits__c/fields/CNO_CNIO_Vendor_Roundtable__c.field-meta.xml
<CustomField>
    <fullName>CNO_CNIO_Vendor_Roundtable__c</fullName>
    <label>CNO-CNIO Vendor Roundtable</label>
    <type>Date</type>
</CustomField>