force-app/main/default/objects/Benefits__c/fields/Communities__c.field-meta.xml
<CustomField>
    <fullName>Communities__c</fullName>
    <label>Communities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D-A-CH Community</fullName>
            </value>
            <value>
                <fullName>Dutch Community</fullName>
            </value>
            <value>
                <fullName>French Community</fullName>
            </value>
            <value>
                <fullName>Future50 Community</fullName>
            </value>
            <value>
                <fullName>HIMSS Middle East Community</fullName>
            </value>
            <value>
                <fullName>Iberian Community</fullName>
            </value>
            <value>
                <fullName>Italian Community</fullName>
            </value>
            <value>
                <fullName>Nordic Community</fullName>
            </value>
            <value>
                <fullName>Nursing and Midwifery Informatics: England</fullName>
            </value>
            <value>
                <fullName>Nursing informatics: Europe Community</fullName>
            </value>
            <value>
                <fullName>Nursing Informatics: Middle East Community</fullName>
            </value>
            <value>
                <fullName>Telehealth Community</fullName>
            </value>
            <value>
                <fullName>Women in Health IT Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>