force-app/main/default/objects/Benefits__c/fields/Content_Sharing_1__c.field-meta.xml
<CustomField>
    <fullName>Content_Sharing_1__c</fullName>
    <label>Content Sharing 1</label>
    <type>Date</type>
</CustomField>