force-app/main/default/objects/Benefits__c/fields/Content_Sharing_2__c.field-meta.xml
<CustomField>
    <fullName>Content_Sharing_2__c</fullName>
    <label>Content Sharing 2</label>
    <type>Date</type>
</CustomField>