force-app/main/default/objects/Benefits__c/fields/Content_Sharing_3__c.field-meta.xml
<CustomField>
    <fullName>Content_Sharing_3__c</fullName>
    <label>Content Sharing 3</label>
    <type>Date</type>
</CustomField>