force-app/main/default/objects/Benefits__c/fields/Corp_Membership_Levels__c.field-meta.xml
<CustomField>
    <fullName>Corp_Membership_Levels__c</fullName>
    <label>Corp Membership Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>