force-app/main/default/objects/Benefits__c/fields/Corp_Relations_Rep__c.field-meta.xml
<CustomField>
    <fullName>Corp_Relations_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corp Relations Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>