force-app/main/default/objects/Benefits__c/fields/Customized_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Customized_Email_1__c</fullName>
    <label>Customized Email 1</label>
    <type>Date</type>
</CustomField>