force-app/main/default/objects/Benefits__c/fields/Customized_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Customized_Email_2__c</fullName>
    <label>Customized Email 2</label>
    <type>Date</type>
</CustomField>