force-app/main/default/objects/Benefits__c/fields/Customized_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Customized_Email_3__c</fullName>
    <label>Customized Email 3</label>
    <type>Date</type>
</CustomField>