force-app/main/default/objects/Benefits__c/fields/CxO_Dialogue_Access_Pass__c.field-meta.xml
<CustomField>
    <fullName>CxO_Dialogue_Access_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CxO Dialogue Access Pass</label>
    <type>Checkbox</type>
</CustomField>