force-app/main/default/objects/Benefits__c/fields/Diamond_Emerald_Lounge_Usage__c.field-meta.xml
<CustomField>
    <fullName>Diamond_Emerald_Lounge_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diamond &amp; Emerald Lounge Usage</label>
    <type>Checkbox</type>
</CustomField>