force-app/main/default/objects/Benefits__c/fields/Exclusive_Article_1__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Article_1__c</fullName>
    <label>Exclusive Article 1</label>
    <type>Date</type>
</CustomField>