force-app/main/default/objects/Benefits__c/fields/Exclusive_Article_2__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Article_2__c</fullName>
    <label>Exclusive Article 2</label>
    <type>Date</type>
</CustomField>