force-app/main/default/objects/Benefits__c/fields/Focus_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Focus_Group_1__c</fullName>
    <label>Focus Group 1</label>
    <type>Date</type>
</CustomField>