force-app/main/default/objects/Benefits__c/fields/Focus_Group_2__c.field-meta.xml
<CustomField>
    <fullName>Focus_Group_2__c</fullName>
    <label>Focus Group 2</label>
    <type>Date</type>
</CustomField>