force-app/main/default/objects/Benefits__c/fields/Focus_Group_3__c.field-meta.xml
<CustomField>
    <fullName>Focus_Group_3__c</fullName>
    <label>Focus Group 3</label>
    <type>Date</type>
</CustomField>