force-app/main/default/objects/Benefits__c/fields/GC_comp_badge__c.field-meta.xml
<CustomField>
    <fullName>GC_comp_badge__c</fullName>
    <label>GC Comp Badge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Number_0_20</valueSetName>
    </valueSet>
</CustomField>