force-app/main/default/objects/Benefits__c/fields/GC_Focus_Group__c.field-meta.xml
<CustomField>
    <fullName>GC_Focus_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GC Focus Group</label>
    <type>Checkbox</type>
</CustomField>