force-app/main/default/objects/Benefits__c/fields/Global_Health_Equity_Network__c.field-meta.xml
<CustomField>
    <fullName>Global_Health_Equity_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Health Equity Network</label>
    <type>Checkbox</type>
</CustomField>