force-app/main/default/objects/Benefits__c/fields/Gov_Rel_program_2__c.field-meta.xml
<CustomField>
    <fullName>Gov_Rel_program_2__c</fullName>
    <label>Gov Rel Program 2</label>
    <type>Date</type>
</CustomField>