force-app/main/default/objects/Benefits__c/fields/Gov_Rel_program_3__c.field-meta.xml
<CustomField>
    <fullName>Gov_Rel_program_3__c</fullName>
    <label>Gov Rel Program 3</label>
    <type>Date</type>
</CustomField>