force-app/main/default/objects/Benefits__c/fields/Gov_Rel_webinar_3__c.field-meta.xml
<CustomField>
    <fullName>Gov_Rel_webinar_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gov Rel 3rd Qtr Webinar</label>
    <type>Checkbox</type>
</CustomField>