force-app/main/default/objects/Benefits__c/fields/HIMSS_APAC_CM_Booth_Plaque_Australia_Sum__c.field-meta.xml
<CustomField>
    <fullName>HIMSS_APAC_CM_Booth_Plaque_Australia_Sum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HIMSS APAC CM Booth Plaque Australia Sum</label>
    <type>Checkbox</type>
</CustomField>