force-app/main/default/objects/Benefits__c/fields/HIMSS_Benefit_Owner__c.field-meta.xml
<CustomField>
    <fullName>HIMSS_Benefit_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HIMSS Benefit Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>