force-app/main/default/objects/Benefits__c/fields/HIMSS_Community_Website_visibility__c.field-meta.xml
<CustomField>
    <fullName>HIMSS_Community_Website_visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HIMSS Community Website visibility</label>
    <type>Checkbox</type>
</CustomField>