force-app/main/default/objects/Benefits__c/fields/HIMSS_Corporate_Membership_Exchange__c.field-meta.xml
<CustomField>
    <fullName>HIMSS_Corporate_Membership_Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HIMSS Corporate Membership Exchange (CMx</label>
    <type>Checkbox</type>
</CustomField>