force-app/main/default/objects/Benefits__c/fields/HIMSS_EHR_Association_member__c.field-meta.xml
<CustomField>
    <fullName>HIMSS_EHR_Association_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HIMSS EHR Association Member</label>
    <type>Checkbox</type>
</CustomField>