force-app/main/default/objects/Benefits__c/fields/HIMSS_Events_visibility__c.field-meta.xml
<CustomField>
    <fullName>HIMSS_Events_visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HIMSS Events visibility</label>
    <type>Checkbox</type>
</CustomField>