force-app/main/default/objects/Benefits__c/fields/HIMSS_org_Guest_article_received__c.field-meta.xml
<CustomField>
    <fullName>HIMSS_org_Guest_article_received__c</fullName>
    <label>HIMSS.org Guest Article Received</label>
    <type>Date</type>
</CustomField>