force-app/main/default/objects/Benefits__c/fields/Host_Private_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Host_Private_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Host Private Meeting</label>
    <type>Checkbox</type>
</CustomField>