force-app/main/default/objects/Benefits__c/fields/IAC_Participant__c.field-meta.xml
<CustomField>
    <fullName>IAC_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAC Participant</label>
    <type>Checkbox</type>
</CustomField>