force-app/main/default/objects/Benefits__c/fields/Identification_at_HIMSS_events__c.field-meta.xml
<CustomField>
    <fullName>Identification_at_HIMSS_events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identification at HIMSS Events</label>
    <type>Checkbox</type>
</CustomField>