force-app/main/default/objects/Benefits__c/fields/Listed_on_CM_Website_Directory__c.field-meta.xml
<CustomField>
    <fullName>Listed_on_CM_Website_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listed on CM Website Directory</label>
    <type>Checkbox</type>
</CustomField>