force-app/main/default/objects/Benefits__c/fields/Listed_on_CM_website_directory_chec__c.field-meta.xml
<CustomField>
    <fullName>Listed_on_CM_website_directory_chec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listed on CM website directory 					chec</label>
    <type>Checkbox</type>
</CustomField>