force-app/main/default/objects/Benefits__c/fields/Listing_in_HIMSS_Weekly_Insider_1__c.field-meta.xml
<CustomField>
    <fullName>Listing_in_HIMSS_Weekly_Insider_1__c</fullName>
    <label>Listing in HIMSS Weekly Insider 1</label>
    <type>Date</type>
</CustomField>