force-app/main/default/objects/Benefits__c/fields/Listing_in_HIMSS_Weekly_Insider_2__c.field-meta.xml
<CustomField>
    <fullName>Listing_in_HIMSS_Weekly_Insider_2__c</fullName>
    <label>Listing in HIMSS Weekly Insider 2</label>
    <type>Date</type>
</CustomField>