force-app/main/default/objects/Benefits__c/fields/Mid_Year_Due__c.field-meta.xml
<CustomField>
    <fullName>Mid_Year_Due__c</fullName>
    <label>Mid-Year Due</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>