force-app/main/default/objects/Benefits__c/fields/Mobile_App__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile App</label>
    <type>Checkbox</type>
</CustomField>