force-app/main/default/objects/Benefits__c/fields/New_CM_Orientation__c.field-meta.xml
<CustomField>
    <fullName>New_CM_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New CM Orientation</label>
    <type>Checkbox</type>
</CustomField>