force-app/main/default/objects/Benefits__c/fields/News_Breaker_Usage__c.field-meta.xml
<CustomField>
    <fullName>News_Breaker_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>News Breaker Usage</label>
    <type>Checkbox</type>
</CustomField>