force-app/main/default/objects/Benefits__c/fields/Not_Interested_in_Second_Contact__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_in_Second_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Interested in Second Contact</label>
    <type>Checkbox</type>
</CustomField>