force-app/main/default/objects/Benefits__c/fields/Number_of_Attendees_3__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees_3__c</fullName>
    <label>Number of Attendees 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>