force-app/main/default/objects/Benefits__c/fields/Number_of_Complimentary_Indv_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Complimentary_Indv_Memberships__c</fullName>
    <label>Number of Complimentary Indv Memberships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Number_0_20</valueSetName>
    </valueSet>
</CustomField>