force-app/main/default/objects/Benefits__c/fields/Online_assessment__c.field-meta.xml
<CustomField>
    <fullName>Online_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Assessment</label>
    <type>Checkbox</type>
</CustomField>