force-app/main/default/objects/Benefits__c/fields/Opinion_article__c.field-meta.xml
<CustomField>
    <fullName>Opinion_article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opinion Article</label>
    <type>Checkbox</type>
</CustomField>