force-app/main/default/objects/Benefits__c/fields/Orientation_1__c.field-meta.xml
<CustomField>
    <fullName>Orientation_1__c</fullName>
    <label>Orientation #1</label>
    <type>Date</type>
</CustomField>