force-app/main/default/objects/Benefits__c/fields/Orientation_2__c.field-meta.xml
<CustomField>
    <fullName>Orientation_2__c</fullName>
    <label>Orientation #2</label>
    <type>Date</type>
</CustomField>