force-app/main/default/objects/Benefits__c/fields/Partner_in_National_Health_IT_Week__c.field-meta.xml
<CustomField>
    <fullName>Partner_in_National_Health_IT_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner in National Health IT Week</label>
    <type>Checkbox</type>
</CustomField>