force-app/main/default/objects/Benefits__c/fields/Quarterly_Call_1__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Call_1__c</fullName>
    <label>Quarterly Call 1</label>
    <type>Date</type>
</CustomField>