force-app/main/default/objects/Benefits__c/fields/Quarterly_Call_2__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Call_2__c</fullName>
    <label>Quarterly Call 2</label>
    <type>Date</type>
</CustomField>