force-app/main/default/objects/Benefits__c/fields/Quarterly_Call_3__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Call_3__c</fullName>
    <label>Quarterly Call 3</label>
    <type>Date</type>
</CustomField>