force-app/main/default/objects/Benefits__c/fields/Quarterly_Calls__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quarterly Calls</label>
    <type>Checkbox</type>
</CustomField>