force-app/main/default/objects/Benefits__c/fields/Received_Foundation_s_Institute_Discount__c.field-meta.xml
<CustomField>
    <fullName>Received_Foundation_s_Institute_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Foundation’s Institute Discount</label>
    <type>Checkbox</type>
</CustomField>