force-app/main/default/objects/Benefits__c/fields/Received_HIMSS_Foundation_s_Institute_di__c.field-meta.xml
<CustomField>
    <fullName>Received_HIMSS_Foundation_s_Institute_di__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received HIMSS Foundation’s Institute di</label>
    <type>Checkbox</type>
</CustomField>