force-app/main/default/objects/Benefits__c/fields/Received_URL__c.field-meta.xml
<CustomField>
    <fullName>Received_URL__c</fullName>
    <label>Received URL</label>
    <type>Url</type>
</CustomField>