force-app/main/default/objects/Benefits__c/fields/Regional_Conference_pass_1_non_sponsore__c.field-meta.xml
<CustomField>
    <fullName>Regional_Conference_pass_1_non_sponsore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regional Conference pass 1  non-sponsore</label>
    <type>Checkbox</type>
</CustomField>