force-app/main/default/objects/Benefits__c/fields/Regional_Conference_pass_2_sponsored__c.field-meta.xml
<CustomField>
    <fullName>Regional_Conference_pass_2_sponsored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regional Conference Pass 2  Sponsored</label>
    <type>Checkbox</type>
</CustomField>