force-app/main/default/objects/Benefits__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Benefits2</relationshipName>
    <type>Lookup</type>
</CustomField>