force-app/main/default/objects/Benefits__c/fields/Show_daily_advert_Malaysia_Summit__c.field-meta.xml
<CustomField>
    <fullName>Show_daily_advert_Malaysia_Summit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Daily Advert Malaysia Summit</label>
    <type>Checkbox</type>
</CustomField>