force-app/main/default/objects/Benefits__c/fields/Special_rate_to_conference_media_etc__c.field-meta.xml
<CustomField>
    <fullName>Special_rate_to_conference_media_etc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special rate to conference, media, etc.</label>
    <type>Checkbox</type>
</CustomField>