force-app/main/default/objects/Benefits__c/fields/Sponsored_as_Non_exhibiting_CM__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_as_Non_exhibiting_CM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsored as Non-exhibiting CM</label>
    <type>Checkbox</type>
</CustomField>