force-app/main/default/objects/Benefits__c/fields/Submitted_job_postings_on_HIMSS_JobMine__c.field-meta.xml
<CustomField>
    <fullName>Submitted_job_postings_on_HIMSS_JobMine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted job postings on HIMSS JobMine</label>
    <type>Checkbox</type>
</CustomField>