force-app/main/default/objects/Benefits__c/fields/Supplied_HIMSS_Corporate_Member_logo__c.field-meta.xml
<CustomField>
    <fullName>Supplied_HIMSS_Corporate_Member_logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplied HIMSS Corporate Member logo</label>
    <type>Checkbox</type>
</CustomField>