force-app/main/default/objects/Benefits__c/fields/Thailand_eHealth_Summit_Exhibitor__c.field-meta.xml
<CustomField>
    <fullName>Thailand_eHealth_Summit_Exhibitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thailand eHealth Summit Exhibitor</label>
    <type>Checkbox</type>
</CustomField>