force-app/main/default/objects/Benefits__c/fields/Third_Contact__c.field-meta.xml
<CustomField>
    <fullName>Third_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Benefits3</relationshipName>
    <type>Lookup</type>
</CustomField>