force-app/main/default/objects/Benefits__c/fields/Type_of_Focus_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Focus_Group_1__c</fullName>
    <label>Type of Focus Group 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>