force-app/main/default/objects/Benefits__c/fields/Type_of_GC_Focus_Group__c.field-meta.xml
<CustomField>
    <fullName>Type_of_GC_Focus_Group__c</fullName>
    <label>Type of GC Focus Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>