force-app/main/default/objects/Benefits__c/fields/Use_of_online_advertising__c.field-meta.xml
<CustomField>
    <fullName>Use_of_online_advertising__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use of Online Advertising</label>
    <type>Checkbox</type>
</CustomField>