force-app/main/default/objects/Benefits__c/fields/Utilized_Exhibit_Space__c.field-meta.xml
<CustomField>
    <fullName>Utilized_Exhibit_Space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilized Exhibit Space</label>
    <type>Checkbox</type>
</CustomField>