force-app/main/default/objects/Benefits__c/fields/Web_banner__c.field-meta.xml
<CustomField>
    <fullName>Web_banner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Banner</label>
    <type>Checkbox</type>
</CustomField>