force-app/main/default/objects/Benefits__c/fields/White_Paper_1__c.field-meta.xml
<CustomField>
    <fullName>White_Paper_1__c</fullName>
    <label>White Paper 1</label>
    <type>Date</type>
</CustomField>